tests/machine/x/ocaml/group_by_multi_join_sort.error
File "/workspace/mochi/tests/machine/x/ocaml/group_by_multi_join_sort.ml", line 55, characters 19-20:
55 |       __res1 := (x.l.l_extendedprice * ((1 - x.l.l_discount))) :: !__res1;
                        ^
Error: Unbound record field l
